@@ -16,50 +16,48 @@
 
 package dagger.internal.codegen.extension;
 
-import static dagger.internal.codegen.base.Util.difference;
+import static dagger.internal.codegen.collect.Sets.difference;
 import static io.jbock.common.graph.Graphs.reachableNodes;
 
-import dagger.internal.codegen.base.Util;
+import dagger.internal.codegen.collect.ImmutableList;
+import dagger.internal.codegen.collect.ImmutableSet;
 import io.jbock.common.graph.Graph;
 import io.jbock.common.graph.SuccessorsFunction;
 import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Queue;
 import java.util.Set;
 
-/** Utility methods for {@link io.jbock.common.graph} types. */
+/** Utility methods for {@code com.google.common.graph} types. */
 public final class DaggerGraphs {
   /**
    * Returns a shortest path from {@code nodeU} to {@code nodeV} in {@code graph} as a list of the
    * nodes visited in sequence, including both {@code nodeU} and {@code nodeV}. (Note that there may
    * be many possible shortest paths.)
    *
-   * <p>If {@code nodeV} is not {@link
-   * io.jbock.common.graph.Graphs#reachableNodes(io.jbock.common.graph.Graph, Object) reachable}
+   * <p>If {@code nodeV} is not {@code
+   * com.google.common.graph.Graphs#reachableNodes(com.google.common.graph.Graph, Object) reachable}
    * from {@code nodeU}, the list returned is empty.
    *
    * @throws IllegalArgumentException if {@code nodeU} or {@code nodeV} is not present in {@code
    *     graph}
    */
-  public static <N> List<N> shortestPath(SuccessorsFunction<N> graph, N nodeU, N nodeV) {
+  public static <N> ImmutableList<N> shortestPath(SuccessorsFunction<N> graph, N nodeU, N nodeV) {
     if (nodeU.equals(nodeV)) {
-      return List.of(nodeU);
+      return ImmutableList.of(nodeU);
     }
-    Set<N> successors = Util.setOf(graph.successors(nodeU));
+    Set<N> successors = ImmutableSet.copyOf(graph.successors(nodeU));
     if (successors.contains(nodeV)) {
-      return List.of(nodeU, nodeV);
+      return ImmutableList.of(nodeU, nodeV);
     }
 
     Map<N, N> visitedNodeToPathPredecessor = new HashMap<>(); // encodes shortest path tree
     for (N node : successors) {
       visitedNodeToPathPredecessor.put(node, nodeU);
     }
-    Queue<N> currentNodes = new ArrayDeque<>(successors);
-    Queue<N> nextNodes = new ArrayDeque<>();
+    Queue<N> currentNodes = new ArrayDeque<N>(successors);
+    Queue<N> nextNodes = new ArrayDeque<N>();
 
     // Perform a breadth-first traversal starting with the successors of nodeU.
     while (!currentNodes.isEmpty()) {
@@ -71,15 +69,14 @@ public final class DaggerGraphs {
           }
           visitedNodeToPathPredecessor.put(nextNode, currentNode);
           if (nextNode.equals(nodeV)) {
-            List<N> builder = new ArrayList<>();
+            ImmutableList.Builder<N> builder = ImmutableList.builder();
             N node = nodeV;
             builder.add(node);
             while (!node.equals(nodeU)) {
               node = visitedNodeToPathPredecessor.get(node);
               builder.add(node);
             }
-            Collections.reverse(builder);
-            return builder;
+            return builder.build().reverse();
           }
           nextNodes.add(nextNode);
         }
@@ -89,14 +86,13 @@ public final class DaggerGraphs {
       nextNodes = emptyQueue; // reusing empty queue faster than allocating new one
     }
 
-    return List.of();
+    return ImmutableList.of();
   }
 
   /** Returns the nodes in a graph that are not reachable from a node. */
-  public static <N> Set<N> unreachableNodes(Graph<N> graph, N node) {
-    return difference(graph.nodes(), reachableNodes(graph, node));
+  public static <N> ImmutableSet<N> unreachableNodes(Graph<N> graph, N node) {
+    return ImmutableSet.copyOf(difference(graph.nodes(), reachableNodes(graph, node)));
   }
 
-  private DaggerGraphs() {
-  }
+  private DaggerGraphs() {}
 }
